增加数据路存储

--- a/public/src/template.html
+++ b/public/src/template.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <script src="/public/lib/iview-ui.css"></script> -->
+    <style>
+    </style>
 </head>
 <body>
     <div id="root"></div>
     <script src="/public/lib/jquery.js"></script>
+    <!-- <script src="/public/lib/iview-ui.js"></script> -->
 </body>
 </html>
