--- a/public/src/template.html
+++ b/public/src/template.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <script src="/public/lib/iview-ui.css"></script> -->
-    <style>
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>图片上传</title>
+  <!-- <script src="/public/lib/iview-ui.css"></script> -->
+  <style>
+  </style>
 </head>
+
 <body>
-    <div id="root"></div>
-    <script src="/public/lib/jquery.js"></script>
-    <!-- <script src="/public/lib/iview-ui.js"></script> -->
+  <div id="root"></div>
+  <script src="/public/lib/jquery.js"></script>
+  <!-- <script src="/public/lib/iview-ui.js"></script> -->
 </body>
+
 </html>
